DynamicList is now backed by an ArrayList